实现了导航栏active的动态效果，由于第一次使用jquary，花了较长的时间学习与调试

--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -57,7 +57,19 @@
     </div>
 </nav>
 
-<script src="/blog/static/blog/jquery-3.2.1.min.js"></script>
+<script src="http://code.jquery.com/jquery.js"></script>
 <script src="/blog/static/blog/bootstrap/js/bootstrap.min.js"></script>
+<script>
+    //这一段负责导航栏的active动态效果  lt（6）表示序号小于6的全部li
+      $(document).ready(function () {
+          $('ul.nav:first>li:lt(6)').click(function (e) {
+              e.preventDefault();
+              $('ul.nav:first>li:lt(6)').removeClass('active');
+              $(this).addClass('active');
+
+          })
+      });
+
+</script>
 </body>
 </html>
