--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}欢迎来到我的博客{% endblock title %}</title>
-    {% load static %}
+    {% load staticfiles %}
     <!-- Bootstrap -->
-    <link href="/blog/static/blog/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="{% static "blog/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
     {% block stylesheet %}{% endblock stylesheet %}
 </head>
 <body>
@@ -32,15 +32,7 @@
                 <li><a href="#">旅游</a></li>
                 <li><a href="#">照片墙</a></li>
                 <li><a href="#">日程安排</a></li>
-                <li style="color: transparent"><a style="color: transparent">these words are just for filling the blank</a></li>
             </ul>
-
-            <form class="navbar-form navbar-left" role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="站内搜索">
-              </div>
-              <button type="submit" class="btn btn-default">搜索</button>
-            </form>
 
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -53,6 +45,14 @@
                   </ul>
                 </li>
             </ul>
+
+            <form class="navbar-form navbar-right" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="站内搜索">
+              </div>
+              <button type="submit" class="btn btn-default">搜索</button>
+            </form>
+
         </div>
     </div>
 </nav>
@@ -91,19 +91,21 @@
     <p>Copyright &copy; 2017, All Rights Reserved</p>
 
 </footer>
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="/blog/static/blog/bootstrap/js/bootstrap.min.js"></script>
-<script>
-    //这一段负责导航栏的active动态效果  lt（6）表示序号小于6的全部li
-      $(document).ready(function () {
-          $('ul.nav:first>li:lt(6)').click(function (e) {
-              e.preventDefault();
-              $('ul.nav:first>li:lt(6)').removeClass('active');
-              $(this).addClass('active');
-
-          })
-      });
-
-</script>
 </body>
+
+
+<script type="text/javascript" src="{% static "blog/jquery.js" %}" ></script>
+<script type="text/javascript">
+    //这一段负责导航栏的active动态效果  lt（6）表示序号小于6的全部li
+/*$(document).ready(function () {
+    $('ul.nav:first>li').click(function (e) {
+    e.preventDefault();
+     $('ul.nav:first>li').removeClass('active');
+     $(this).addClass('active');
+    })
+});*/
+x = $('ul.nav:first>li');
+x.addClass('actice');
+</script>
+<script src="{% static "blog/bootstrap/js/bootstrap.min.js"%}"></script>
 </html>
