--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -1,3 +1,3 @@
 {% extends "blog/basic.html" %}
-{% block title %}我的博客我做主{% endblock %}
+{% block title %}{{ name }}的博客{% endblock %}
 {% block content %}{{ greeting }}{% endblock %}
