working on main.html ,next add a picture

--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -2,15 +2,44 @@
 {% block title %}{{ name }}的博客{% endblock %}
 {% block content %}
     <div class=" left-block " style="width: 50%;">
+        <div class="jumbotron" style="background-image: url('/blog/static/blog/images/t.jpg'); background-repeat: no-repeat;background-size:  100% 100%;">
+            <p>推荐</p>
+        </div>
+    </div>
+    <h3>小日记 <span class="label label-info">New</span></h3>
+    <div class=" left-block " style="width: 50%;">
         <div class="list-group text-center">
-          <a href="#" class="list-group-item active">
+          <a href="#" class="list-group-item list-group-item-info">
             <h4 class="list-group-item-heading">List group item heading</h4>
             <p class="list-group-item-text">...</p>
           </a>
-        <a href="#" class="list-group-item">
+        </div>
+    </div>
+    <h3>收获  <span class="label label-primary">New</span></h3>
+    <div class=" left-block " style="width: 50%;">
+        <div class="list-group text-center">
+          <a href="#" class="list-group-item list-group-item-info">
             <h4 class="list-group-item-heading">List group item heading</h4>
             <p class="list-group-item-text">...</p>
-        </a>
+          </a>
+        </div>
+    </div>
+    <h3>旅游<span class="label label-success">New</span></h3>
+    <div class=" left-block " style="width: 50%;">
+        <div class="list-group text-center">
+          <a href="#" class="list-group-item list-group-item-info">
+            <h4 class="list-group-item-heading">List group item heading</h4>
+            <p class="list-group-item-text">...</p>
+          </a>
+        </div>
+    </div>
+    <h3>照片墙 <span class="label label-default">New</span></h3>
+    <div class=" left-block " style="width: 50%;">
+        <div class="list-group text-center">
+          <a href="#" class="list-group-item list-group-item-info">
+            <h4 class="list-group-item-heading">List group item heading</h4>
+            <p class="list-group-item-text">...</p>
+          </a>
         </div>
     </div>
 {% endblock %}
