--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -6,7 +6,7 @@
     {% load staticfiles %}
     <!-- Bootstrap -->
     <link href="{% static "blog/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
-    {% block stylesheet %}{% endblock stylesheet %}
+    {% block head %}{% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -27,8 +27,8 @@
 
             <ul class="nav navbar-nav " data-toggle="tab">
                 <li class="active"><a href="#">主页<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">鸡汤</a></li>
-                <li><a href="#">干货</a></li>
+                <li><a href="#">小日记</a></li>
+                <li><a href="#">收获</a></li>
                 <li><a href="#">旅游</a></li>
                 <li><a href="#">照片墙</a></li>
                 <li><a href="#">日程安排</a></li>
@@ -79,7 +79,7 @@
 
 
 <!--页脚部分-->
-<footer class="text-center navbar-fixed-bottom" style="line-height: 20px;color: #9d9d9d ">
+<footer class="text-center " style="line-height: 20px;color: #9d9d9d ">
     <hr>
     <ul class="list-inline">
         <li>感谢开源项目：<a href="http://www.djangoproject.com/">Django</a></li>
