--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -41,7 +41,7 @@
                     <li><a href="#">设置</a></li>
                     <li><a href="#">修改密码</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">退出登录</a></li>
+                    <li><a href="/logout/">退出登录</a></li>
                   </ul>
                 </li>
             </ul>
