--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -1,6 +1,15 @@
 {% extends "blog/basic.html" %}
 
-{% block title %}{{ name }}的博客{% endblock %}
+{% block title %}
+    {% if name %}
+    {{ name }}的博客
+    {% endif %}
+    {% if user.is_authenticated %}
+        {{ user.username }}
+    {% else %}
+        您是访客
+    {% endif %}
+{% endblock %}
 
 {% block head %}
     {% load static %}
@@ -8,7 +17,11 @@
 {% endblock %}
 
 {% block login %}
-    <a href="#" class="dropdown-toggle"  data-toggle="modal" data-target="#myModal">登陆<span class="caret"></span></a>
+    {% if user.is_authenticated %}
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ user.first_name }} <span class="caret"></span></a>
+    {% else %}
+        <a href="#" class="dropdown-toggle"  data-toggle="modal" data-target="#myModal">登录<span class="caret"></span></a>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -59,15 +72,15 @@
 {% endblock %}
 
 {% block insert-content %}
-    <form>
+    <form action="{% url "blog:loginAction" %}" method="post">
     {% csrf_token %}
       <div class="form-group">
         <label for="exampleInputEmail1">博客账号</label>
-        <input type="text" class="form-control" required placeholder="账号">
+        <input type="text" class="form-control" name="blogID" required placeholder="账号">
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">密码</label>
-        <input type="password" class="form-control" required id="exampleInputPassword1" placeholder="密码">
+        <input type="password" class="form-control" name="password" required id="exampleInputPassword1" placeholder="密码">
       </div>
         <br>
       <div style="text-align: right;">
