--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -94,7 +94,7 @@
 <!--页脚部分-->
 <footer class="text-center " style="line-height: 20px;color: #9d9d9d ">
     <hr>
-    <ul class="list-inline">
+    <ul class="list-inline" >
         <li>感谢开源项目：<a href="http://www.djangoproject.com/">Django</a></li>
         <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
     </ul>
@@ -128,6 +128,34 @@ $(document).ready(function () {
     }
 });
 });
+$.ajaxSetup({
+            data: {csrfmiddlewaretoken: '{{ csrf_token }}' }
+        });
+        $(document).ready(function () {
+        //用这种直接pos可以快速便捷地使用ajax
+{#            $('ul.list-inline').click(function () {#}
+{#                $.post('/', {'blogID':'294889365','password':'abcd159753'},function(data,status) {#}
+{#                    alert(status);#}
+{#                    $('body').html();#}
+{#                });#}
+{#            })#}
+{#            $('ul.list-inline').click(function (){#}
+{#            $.ajax({url:'/',type:'post',data:{'blogID':'294889365','password':'abcd159753'},success:function (data,status) {#}
+{#                alert(data);#}
+{##}
+{#            }})#}
+{#             });#}
+            $('#submit').click(function (){
+                blogID = $('#blogID').val();
+                password = $('#exampleInputPassword1').val();
+                alert(blogID+'    '+password);
+                $.ajax({url:'/',type:'post',data:{'blogID':blogID,'password':password},success:function (data,status) {
+                    alert(data);
+                    $('body').html(data);
+                }})
+             });
+
+        });
 </script>
 <script src="{% static "blog/bootstrap/js/bootstrap.min.js"%}"></script>
 </html>
