--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -72,46 +72,42 @@
 {% endblock %}
 
 {% block insert-content %}
-    <form>
-    {% csrf_token %}
-      <div class="form-group">
-        <label for="exampleInputEmail1">博客账号</label>
-        <input type="text" class="form-control" name="blogID" required placeholder="账号" id="blogID">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">密码</label>
-        <input type="password" class="form-control" name="password" required id="exampleInputPassword1" placeholder="密码">
-      </div>
-        <br>
-      <div style="text-align: right;">
-        <button type="button" class="btn btn-primary " data-dismiss="modal" aria-label="Close">取消</button>
-        <button type="submit"  class="btn btn-primary " id="submit">登录</button>
-      </div>
-    </form>
+    <div class="form-group">
+    <label for="exampleInputEmail1">博客账号</label>
+    <input type="text" class="form-control" name="blogID" required placeholder="账号" id="blogID">
+    </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">密码</label>
+    <input type="password" class="form-control" name="password" required id="exampleInputPassword1" placeholder="密码">
+    </div>
+    <br>
+    <div style="text-align: right;">
+    <button type="button" class="btn btn-primary " data-dismiss="modal" aria-label="Close">取消</button>
+    <button type="submit"  class="btn btn-primary " id="submit">登录</button>
+    </div>
     <script type="text/javascript" src="{% static "blog/jquery.js" %}" ></script>
     <script type="text/javascript">
-        $.ajaxSetup({
-            data: {csrfmiddlewaretoken: '{{ csrf_token }}' }
-        });
+
+    //此处有大坑！！！
+    //在用ajax提交时，不能有原来的<form></form>标签的存在，否则会干扰ajax的运行！！！
         $(document).ready(function () {
-
-        {#    $('ul.list-inline').click(function () {#}
-        {#        $.post('/', {'blogID':'294889365','password':'abcd159753'},function(data,status) {#}
-        {#            alert(status);#}
-        {#            $('body').html();#}
-        {#        });#}
-        {#    })#}
             $('#submit').click(function (){
-                blogID = $('#blogID').val();
-                password = $('#exampleInputPassword1').val();
-                alert(blogID+'    '+password);
+                var blogID = $('#blogID').val();
+                var password = $('#exampleInputPassword1').val();
                 $.ajax({url:'/',type:'post',data:{'blogID':blogID,'password':password},success:function (data,status) {
-                    //alert(data);
-                    $('body').html(data);
-
-                }})
-             });
-
+                    if(data.length>10)
+                    {
+                        $('html').html(data);
+                    }
+                    else
+                    {
+                        alert(data);
+                    }
+                },async:false});
+            });
+            $('#blogID').blur(function () {
+                $.ajax({url:'/',type:'post',data:{'blogID':blogID,'password':password}})
+            })
         });
     </script>
 {% endblock %}
