--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}欢迎来到我的博客{% endblock title %}</title>
+    {% block title %}欢迎来到我的博客{% endblock title %}</title>
     {% load staticfiles %}
     <!-- Bootstrap -->
     <link href="{% static "blog/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
