--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block title %}欢迎来到我的博客{% endblock title %}</title>
+    <title>{% block title %}欢迎来到我的博客{% endblock title %}</title>
     {% load staticfiles %}
     <!-- Bootstrap -->
     <link href="{% static "blog/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
     {% block head %}{% endblock %}
 </head>
 <body>
-<!--用于接收提示信息-->
-{% if messages %}
-<ul class="messages" hidden>
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
-        {{ message }}
-    </li>
-    {% endfor %}
-</ul>
-{% endif %}
+<!--用于接收提示信息, 现已选择ajax的实现方案-->
+{#{% if messages %}#}
+{#<ul class="messages" hidden>#}
+{#    {% for message in messages %}#}
+{#    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>#}
+{#        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}#}
+{#        {{ message }}#}
+{#    </li>#}
+{#    {% endfor %}#}
+{#</ul>#}
+{#{% endif %}#}
 
 
 <nav class="navbar navbar-inverse">
@@ -39,8 +39,8 @@
         <div class="collapse navbar-collapse">
 
             <ul class="nav navbar-nav " data-toggle="tab">
-                <li><a href="#">主页<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">小日记</a></li>
+                <li><a href="">主页<span class="sr-only">(current)</span></a></li>
+                <li><a href=''>小日记</a></li>
                 <li><a href="#">收获</a></li>
                 <li><a href="#">旅游</a></li>
                 <li><a href="#">照片墙</a></li>
