重构了view.py中的结构，对代码进行了整合封装，同时对退出登录的动作也运用了ajax

--- a/blog/templates/blog/diary.html
+++ b/blog/templates/blog/diary.html
@@ -6,7 +6,7 @@
     <ul class="list-inline">
         <li><a href="#" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>主页</h4></a></li>
         <li><a href="#" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>小日记</h4></a></li>
-        <li><a href="" style="text-decoration: none;color: #000"><h4><span class="glyphicon glyphicon-menu-left"></span>标题</h4></a></li>
+        <li><a href="" style="text-decoration: none;color: grey"><h4><span class="glyphicon glyphicon-menu-left"></span>标题</h4></a></li>
     </ul>
     </div>
 {% block diaries %}
