--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -49,12 +49,25 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                  {% block login %}<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">登陆 <span class="caret"></span></a>{% endblock %}
+                    {% if user.is_authenticated %}
+                        <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    {% if user.username %}
+                        您好！  {{ user.username }}
+                    {% else %}
+                        您好！  {{ user.name }}
+                    {% endif %}
+                    <span class="caret"></span>
+                </a>
+                    {% else %}
+            {#此处负责登录#}
+            <a href="#" class="dropdown-toggle"  data-toggle="modal" data-target="#myModal">登录<span class="caret"></span></a>
+
+        {% endif %}
                   <ul class="dropdown-menu">
                     <li><a href="">设置</a></li>
                     <li><a href="#">修改密码</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="/logout/">退出登录</a></li>
+                    <li><a href='' id="logout">退出登录</a></li>
                   </ul>
                 </li>
             </ul>
@@ -78,10 +91,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        {% block insert-Title %}登录{% endblock %}
       </div>
       <div class="modal-body">
-        {% block insert-content %}{% endblock %}
+        <div class="form-group">
+            <label for="exampleInputEmail1">博客账号</label>
+            <input type="text" class="form-control" name="blogID" required placeholder="账号" id="blogID">
+            </div>
+            <div class="form-group">
+            <label for="exampleInputPassword1">密码</label>
+            <input type="password" class="form-control" name="password" required id="exampleInputPassword1" placeholder="密码">
+            </div>
+            <br>
+            <div style="text-align: right;">
+            <button type="button" class="btn btn-primary " data-dismiss="modal" aria-label="Close">取消</button>
+            <button type="submit"  class="btn btn-primary " id="submit">登录</button>
+            </div>
       </div>
       <div class="modal-footer">
         {% block insert-footer %}{% endblock %}
@@ -158,6 +182,42 @@ $.ajaxSetup({data: {csrfmiddlewaretoken: '{{ csrf_token }}' }});
 {#            }})#}
 {#             });#}
 
+
+//此处有大坑！！！
+//在用ajax提交时，不能有原来的<form></form>标签的存在，否则会干扰ajax的运行！！！
+    $(document).ready(function () {
+        $('#submit').click(function (){
+            var blogID = $('#blogID').val();
+            var password = $('#exampleInputPassword1').val();
+            $.ajax({url:'/',type:'post',data:{'blogID':blogID,'password':password},success:function (data,status) {
+                if(data.length>10)
+                {
+                    //$('html').html(data);       //刷新后字体会变小的bug
+                    //window.location.reload();   //可以解决bug，但觉得还不够好
+                    top.location.reload()       //可以解决bug，只刷新顶部，比较好
+                    //$('.username').load('/' ,' .username')
+                }
+                else
+                {
+                    alert(data);
+                }
+            },async:false});
+        });
+    });
+    $(document).ready(function () {
+        $('#logout').click(function (){
+            $.ajax({url:'/',type:'post',data:{'logout':true},success:function (data,status) {
+                if(data.length>10)
+                {
+                    top.location.reload()       //可以解决bug，只刷新顶部，比较好
+                }
+                else
+                {
+                    alert(data);
+                }
+            },async:false});
+        });
+    });
 </script>
 <script src="{% static "blog/bootstrap/js/bootstrap.min.js"%}"></script>
 </html>
