--- a/blog/templates/blog/basic.html
+++ b/blog/templates/blog/basic.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav navbar-left" >
-                <li><a href="">主页<span class="sr-only">(current)</span></a></li>
+                <li><a href="/">主页<span class="sr-only">(current)</span></a></li>
                 <li><a href="/diary/">小日记</a></li>
                 <li><a href="#">收获</a></li>
                 <li><a href="#">旅游</a></li>
