add photos.html to display photos

--- a/blog/templates/blog/essay_list.html
+++ b/blog/templates/blog/essay_list.html
@@ -10,7 +10,7 @@
             </ul>
             <div class=" left-block ">
                 <div class="list-group text-center">
-                  <a href="#" class="list-group-item list-group-item-info">
+                  <a href="1/" class="list-group-item list-group-item-info">
                     <h4 class="list-group-item-heading">这里是简介</h4>
                     <div class="list-group-item-text">
                     </div>
