--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}欢迎来到我的博客{% endblock title %}</title>
+    <title>
+        {% if user.is_authenticated %}
+        {% if user.username %}
+            {{ user.username }}的个人博客
+            {% else %}
+            {{ user.name }}的个人博客
+        {% endif %}
+        {% else %}
+            您是访客
+        {% endif %}
+    </title>
     {% load staticfiles %}
     <!-- Bootstrap -->
     <link href="{% static "blog/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
@@ -43,7 +53,7 @@
                 <li><a href="/diary/">小日记</a></li>
                 <li><a href="#">收获</a></li>
                 <li><a href="#">旅游</a></li>
-                <li><a href="#">照片墙</a></li>
+                <li><a href="/photo/">照片墙</a></li>
                 <li><a href="#">日程安排</a></li>
             </ul>
 
