--- a/blog/templates/blog/essay.html
+++ b/blog/templates/blog/essay.html
@@ -1,1 +1,31 @@
 {% extends "blog/content.html" %}
+
+
+
+{#这里是具体文章的区域#}
+{% block diaries %}
+    <div class="center-block" style="width: 70%;">
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <ul class="list-inline">
+                <li><h3> 标题1 </h3></li>
+                <li><h4><span class="label label-info">标签</span></h4></li>
+            </ul>
+          </div>
+          <div class="panel-body">
+            文章内容:
+              哈尔滨工业大学（Harbin Institute of Technology）简称哈工大（HIT），由中华人民共和国工业和信息化部直属，中央直管副部级建制，位列“211工程”、“985工程”，入选“2011计划”、“珠峰计划”、“111计划”、“卓越工程师教育培养计划”，为“九校联盟”、中国大学校长联谊会、“卓越大学联盟”、“中俄工科大学联盟”、“中国-西班牙大学联盟”主要成员，设有研究生院，拥有研究生自主划线资格，享有“工程师的摇篮”之美誉。
+哈尔滨工业大学始建于1920年，当时校名为“哈尔滨中俄工业学校”，其创建与帝俄在中国建设中东铁路（抗日战争胜利后，改称“中长铁路”）有直接关系，建校的宗旨是为中东铁路培养工程技术人才，学校按俄国的教育模式办学；1938年1月1日起，学校改名为哈尔滨工业大学，并一直沿用至今；1945年，抗日战争胜利后，哈尔滨工业大学由中长铁路局领导，属中苏两国政府共同管理；1950年6月，哈工大回到新中国怀抱并进入全面改造和扩建的新阶段；2000年，同根同源的哈尔滨工业大学、哈尔滨建筑大学合并组建新的哈尔滨工业大学。
+据2016年9月哈工大官网信息显示，哈工大拥有校本部、威海校区和深圳校区（筹），形成了“一校三区”的办学格局，其中校本部校园面积347.49公顷，建筑面积203.86万平方米 ；专任教师总数为3695人，其中正高职1122人，占教师总数的30.4%，副高职1534人，占教师总数的41.5%，专任教师博士化率为75.7%；下辖20个学院，开办87个本科专业。[1]
+          </div>
+          <div class="panel-footer">
+            {% if user.username %}
+                {{ user.username }}
+                {% else %}
+                {{ user.name }}
+                写作于：2017年8月21日夜
+            {% endif %}
+          </div>
+        </div>
+    </div>
+{% endblock %}
