--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -51,10 +51,10 @@
             <ul class="nav navbar-nav navbar-left" >
                 <li><a href="/">主页<span class="sr-only">(current)</span></a></li>
                 <li><a href="/diary/">小日记</a></li>
-                <li><a href="#">收获</a></li>
-                <li><a href="#">旅游</a></li>
+                <li><a href="/tech/">收获</a></li>
+                <li><a href="/trips/">旅游</a></li>
                 <li><a href="/photo/">照片墙</a></li>
-                <li><a href="#">日程安排</a></li>
+                <li><a href="">日程安排</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
