--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -5,8 +5,16 @@
     <div class="panel inline-group">
     <ul class="list-inline">
         <li><a href="/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>主页</h4></a></li>
-        <li><a href="/diary/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>小日记</h4></a></li>
-        <li><a href="" style="text-decoration: none;color: grey"><h4><span class="glyphicon glyphicon-menu-left"></span>标题</h4></a></li>
+        {% if essayTitle %}
+            <li><a href="/{{ contentURL }}/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>{{ contentType }}</h4></a></li>
+        {% endif %}
+        <li><a href="" style="text-decoration: none;color: grey"><h4><span class="glyphicon glyphicon-menu-left"></span>
+            {% if essayTitle %}
+                {{ essayTitle }}
+            {% else %}
+                {{ contentType }}
+            {% endif %}
+        </h4></a></li>
     </ul>
     </div>
 {% block diaries %}
