--- a/blog/templates/blog/essay_list.html
+++ b/blog/templates/blog/essay_list.html
@@ -3,15 +3,15 @@
 
 {% block diaries %}
     <div class="center-block" style="width: 50%">
-{#        {% for diary in diaries %}#}
+{#        {% for log in a %}#}
             <ul class="list-inline">
-                <li><h3> 标题1 </h3></li>
+                <li><h3> {{ diary.title }} </h3></li>
                 <li><h6><span class="label label-info">标签</span></h6></li>
             </ul>
             <div class=" left-block ">
                 <div class="list-group text-center">
                   <a href="1/" class="list-group-item list-group-item-info">
-                    <h4 class="list-group-item-heading">这里是简介</h4>
+                    <h4 class="list-group-item-heading">{{ diary.introduction }}</h4>
                     <div class="list-group-item-text">
                     </div>
                   </a>
