--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -10,7 +10,7 @@
         {% endif %}
         <li><a href="" style="text-decoration: none;color: grey"><h4><span class="glyphicon glyphicon-menu-left"></span>
             {% if essayTitle %}
-                {{ essayTitle }}
+                {{ diary.title }}
             {% else %}
                 {{ contentType }}
             {% endif %}
