解决的具体文章的标识问题

--- a/blog/templates/blog/essay_list.html
+++ b/blog/templates/blog/essay_list.html
@@ -18,7 +18,7 @@
             </ul>
             <div class=" left-block ">
                 <div class="list-group text-center">
-                  <a href="{{ diary.author_id }}/" class="list-group-item list-group-item-info">
+                  <a href="{{ diary.id }}/" class="list-group-item list-group-item-info">
                     <h4 class="list-group-item-heading">{{ diary.introduction }}</h4>
                     <div class="list-group-item-text">
                     </div>
