complete the diary department

--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -5,11 +5,11 @@
     <div class="panel inline-group">
     <ul class="list-inline">
         <li><a href="/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>主页</h4></a></li>
-        {% if essayTitle %}
+        {% if diary.title %}
             <li><a href="/{{ contentURL }}/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>{{ contentType }}</h4></a></li>
         {% endif %}
         <li><a href="" style="text-decoration: none;color: grey"><h4><span class="glyphicon glyphicon-menu-left"></span>
-            {% if essayTitle %}
+            {% if diary.title %}
                 {{ diary.title }}
             {% else %}
                 {{ contentType }}
