--- a/blog/templates/blog/essay_list.html
+++ b/blog/templates/blog/essay_list.html
@@ -7,10 +7,10 @@
             <ul class="list-inline">
                 <li><h3> {{ diary.title }} </h3></li>
                 {% if diary.label1  %}
-                    <li><h4><span class="label label-info">{{ diary.label1 }}</span></h4></li>
+                    <li><h4><span class="label label-primary">{{ diary.label1 }}</span></h4></li>
                 {% endif %}
                 {% if diary.label2  %}
-                    <li><h4><span class="label label-info">{{ diary.label2 }}</span></h4></li>
+                    <li><h4><span class="label label-success">{{ diary.label2 }}</span></h4></li>
                 {% endif %}
                 {% if diary.label3  %}
                     <li><h4><span class="label label-info">{{ diary.label3 }}</span></h4></li>
