博客主体的功能实现了，接下来需要实现文件上传，文字上传，修改不登录能否查看内容的逻辑，做完查找功能

--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -5,12 +5,12 @@
     <div class="panel inline-group">
     <ul class="list-inline">
         <li><a href="/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>主页</h4></a></li>
-        {% if diary.title %}
+        {% if essay.title %}
             <li><a href="/{{ contentURL }}/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>{{ contentType }}</h4></a></li>
         {% endif %}
         <li><a href="" style="text-decoration: none;color: grey"><h4><span class="glyphicon glyphicon-menu-left"></span>
-            {% if diary.title %}
-                {{ diary.title }}
+            {% if essay.title %}
+                {{ essay.title }}
             {% else %}
                 {{ contentType }}
             {% endif %}
