建立了添加和修改两个按钮，调整了位置

--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -8,6 +8,6 @@
 .words{
     color: rgba(255,255,255,0.6) ;
     position: relative;
-    left: 180px;
-    top:150px;
+    left: 45%;
+    top:75%;
 }
