--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -74,10 +74,10 @@
 
         {% endif %}
                   <ul class="dropdown-menu">
-                    <li><a href="">设置</a></li>
-                    <li><a href="#">修改密码</a></li>
+                    <li><a href=""><span class="glyphicon glyphicon-cog"></span>     设置  </a></li>
+                    <li><a href=""><span class="glyphicon glyphicon-edit"></span>      修改密码</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href='' id="logout">退出登录</a></li>
+                    <li><a href='' id="logout"><span class="glyphicon glyphicon-log-out"></span>     退出登录</a></li>
                   </ul>
                 </li>
             </ul>
