--- a/blog/templates/blog/essay_list.html
+++ b/blog/templates/blog/essay_list.html
@@ -5,15 +5,22 @@
     <div class="center-block" style="width: 50%">
         {% for essay in essays %}
             <ul class="list-inline">
-                <li><h3> {{ essay.title }} </h3></li>
-                {% if essay.label1  %}
-                    <li><h4><span class="label label-primary">{{ essay.label1 }}</span></h4></li>
-                {% endif %}
-                {% if essay.label2  %}
-                    <li><h4><span class="label label-success">{{ essay.label2 }}</span></h4></li>
-                {% endif %}
-                {% if essay.label3  %}
-                    <li><h4><span class="label label-info">{{ essay.label3 }}</span></h4></li>
+                <li>
+                    <ul class="list-inline">
+                        <li><h3 style="margin: 0"> {{ essay.title }} </h3></li>
+                        {% if essay.label1  %}
+                            <li><h4 style="margin: 0"><span class="label label-primary">{{ essay.label1 }}</span></h4></li>
+                        {% endif %}
+                        {% if essay.label2  %}
+                            <li><h4 style="margin: 0"><span class="label label-success">{{ essay.label2 }}</span></h4></li>
+                        {% endif %}
+                        {% if essay.label3  %}
+                            <li><h4 style="margin: 0"><span class="label label-info">{{ essay.label3 }}</span></h4></li>
+                        {% endif %}
+                    </ul>
+                </li>
+                {% if user.is_authenticated %}
+                    <li style="position:absolute;right: 25%"><button type="button" class="btn btn-info"><h5 style="margin: 0;"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button></li>
                 {% endif %}
             </ul>
             <div class=" left-block ">
