change the color of buttons

--- a/blog/templates/blog/essay_list.html
+++ b/blog/templates/blog/essay_list.html
@@ -20,7 +20,7 @@
                     </ul>
                 </li>
                 {% if user.is_authenticated %}
-                    <li style="position:absolute;right: 25%"><button type="button" class="btn btn-info"><h5 style="margin: 0;"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button></li>
+                    <li style="position:absolute;right: 25%"><button type="button" class="btn btn-warning"><h5 style="margin: 0;"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button></li>
                 {% endif %}
             </ul>
             <div class=" left-block ">
