--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -49,11 +49,11 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav navbar-left" >
-                <li><a href="/">主页<span class="sr-only">(current)</span></a></li>
-                <li><a href="/diary/">小日记</a></li>
-                <li><a href="/tech/">收获</a></li>
-                <li><a href="/trip/">旅游</a></li>
-                <li><a href="/photo/">照片墙</a></li>
+                <li><a href="/id={{ id }}/">主页<span class="sr-only">(current)</span></a></li>
+                <li><a href="/id={{ id }}/diary/">小日记</a></li>
+                <li><a href="/id={{ id }}/tech/">收获</a></li>
+                <li><a href="/id={{ id }}/trip/">旅游</a></li>
+                <li><a href="/id={{ id }}/photo/">照片墙</a></li>
                 <li><a href="">日程安排</a></li>
             </ul>
 
@@ -199,7 +199,7 @@ $.ajaxSetup({data: {csrfmiddlewaretoken: '{{ csrf_token }}' }});
         $('#submit').click(function (){
             var blogID = $('#blogID').val();
             var password = $('#exampleInputPassword1').val();
-            $.ajax({url:'/',type:'post',data:{'blogID':blogID,'password':password},success:function (data,status) {
+            $.ajax({url:'',type:'post',data:{'blogID':blogID,'password':password},success:function (data,status) {
                 if(data.length>10)
                 {
                     //$('html').html(data);       //刷新后字体会变小的bug
@@ -216,7 +216,7 @@ $.ajaxSetup({data: {csrfmiddlewaretoken: '{{ csrf_token }}' }});
     });
     $(document).ready(function () {
         $('#logout').click(function (){
-            $.ajax({url:'/',type:'post',data:{'logout':true},success:function (data,status) {
+            $.ajax({url:'',type:'post',data:{'logout':true},success:function (data,status) {
                 if(data.length>10)
                 {
                     top.location.reload()       //可以解决bug，只刷新顶部，比较好
