--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -4,9 +4,9 @@
 {% block content %}
     <div class="panel inline-group">
     <ul class="list-inline">
-        <li><a href="/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>主页</h4></a></li>
+        <li><a href="/id={{ id }}/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>主页</h4></a></li>
         {% if essay.title %}
-            <li><a href="/{{ contentURL }}/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>{{ contentType }}</h4></a></li>
+            <li><a href="/id={{ id }}/{{ contentURL }}/" style="text-decoration: none;color: #0e90d2"><h4><span class="glyphicon glyphicon-menu-left"></span>{{ contentType }}</h4></a></li>
         {% endif %}
         <li><a href="" style="text-decoration: none;color: grey"><h4><span class="glyphicon glyphicon-menu-left"></span>
             {% if essay.title %}
@@ -15,7 +15,7 @@
                 {{ contentType }}
             {% endif %}
         </h4></a></li>
-        {% if user.is_authenticated %}
+        {% if user.name == id %}
             <li style="position: absolute;right: 2%;"><button type="button" class="btn btn-success"><h5 style="margin: 0;"><span class="glyphicon glyphicon-plus"></span>       增加</h5></button></li>
         {% endif %}
     </ul>
