--- a/blog/templates/blog/essay_list.html
+++ b/blog/templates/blog/essay_list.html
@@ -7,7 +7,7 @@
             <ul class="list-inline">
                 <li>
                     <ul class="list-inline">
-                        <li><h3 style="margin: 0"> {{ essay.title }} </h3></li>
+                        <li><h1 style="margin: 0"> {{ essay.title }} </h1></li>
                         {% if essay.label1  %}
                             <li><h4 style="margin: 0"><span class="label label-primary">{{ essay.label1 }}</span></h4></li>
                         {% endif %}
@@ -19,8 +19,9 @@
                         {% endif %}
                     </ul>
                 </li>
-                {% if user.is_authenticated %}
-                    <li style="position:absolute;right: 25%"><button type="button" class="btn btn-warning"><h5 style="margin: 0;"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button></li>
+                {% if user.name == id %}
+                    <li style="position:absolute;right: 30%"><button type="button" class="btn btn-warning btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button></li>
+                    <li style="position: absolute;right:25%;"><button type="button" class="btn btn-danger btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-remove"></span>       删除</h5></button></li>
                 {% endif %}
             </ul>
             <div class=" left-block ">
@@ -32,6 +33,7 @@
                   </a>
                 </div>
             </div>
+            <br><br><br><br>
         {% endfor %}
     </div>
 {% endblock %}
