--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -35,42 +35,87 @@
                 <h3 class="words">还有诗和远方</h3>
             </div>
         </div>
-        <h3>小日记 <span class="label label-info">New</span></h3>
-        <div class=" left-block ">
-            <div class="list-group text-center">
-              <a href="#" class="list-group-item list-group-item-info">
-                <h4 class="list-group-item-heading">List group item heading</h4>
-                <p class="list-group-item-text">...</p>
-              </a>
+    <hr>
+        <h1>小日记 <span class="label label-info">New</span></h1>
+        <br><br>
+        {% for diary in diaries %}
+            <div class="center-block">
+                <ul class="list-inline">
+                        <li><h3 style="margin: 0"> {{ diary.title }} </h3></li>
+                    {% if user.name == id %}
+                        <li style="position:absolute;right: 30%"><button type="button" class="btn btn-warning btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button></li>
+                        <li style="position: absolute;right:25%;"><button type="button" class="btn btn-danger btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-remove"></span>       删除</h5></button></li>
+                    {% endif %}
+                </ul>
+            <div class=" left-block ">
+                <div class="list-group text-center">
+                  <a href="{{ diary.id }}/" class="list-group-item list-group-item-info">
+                    <h4 class="list-group-item-heading">{{ diary.introduction }}</h4>
+                    <div class="list-group-item-text">
+                    </div>
+                  </a>
+                </div>
             </div>
-        </div>
-        <h3>收获  <span class="label label-primary">New</span></h3>
-        <div class=" left-block ">
-            <div class="list-group text-center">
-              <a href="#" class="list-group-item list-group-item-info">
-                <h4 class="list-group-item-heading">List group item heading</h4>
-                <p class="list-group-item-text">...</p>
-              </a>
+            <br>
             </div>
-        </div>
-        <h3>旅游<span class="label label-success">New</span></h3>
-        <div class=" left-block ">
-            <div class="list-group text-center">
-              <a href="#" class="list-group-item list-group-item-info">
-                <h4 class="list-group-item-heading">List group item heading</h4>
-                <p class="list-group-item-text">...</p>
-              </a>
+        {% endfor %}
+    <hr>
+        <h1>收获  <span class="label label-primary">New</span></h1>
+        <br><br>
+        {% for tech in techs %}
+            <div class="center-block">
+                <ul class="list-inline">
+                        <li><h3 style="margin: 0"> {{ tech.title }} </h3></li>
+                    {% if user.name == id %}
+                        <li style="position:absolute;right: 30%"><button type="button" class="btn btn-warning btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button></li>
+                        <li style="position: absolute;right:25%;"><button type="button" class="btn btn-danger btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-remove"></span>       删除</h5></button></li>
+                    {% endif %}
+                </ul>
+            <div class=" left-block ">
+                <div class="list-group text-center">
+                  <a href="{{ tech.id }}/" class="list-group-item list-group-item-info">
+                    <h4 class="list-group-item-heading">{{ tech.introduction }}</h4>
+                    <div class="list-group-item-text">
+                    </div>
+                  </a>
+                </div>
             </div>
-        </div>
-        <h3>照片墙 <span class="label label-default">New</span></h3>
-        <div class=" left-block ">
-            <div class="list-group text-center">
-              <a href="#" class="list-group-item list-group-item-info">
-                <h4 class="list-group-item-heading">List group item heading</h4>
-                <p class="list-group-item-text">...</p>
-              </a>
+            <br>
             </div>
-        </div>
+        {% endfor %}
+    <hr>
+        <h1>旅游<span class="label label-success">New</span></h1>
+        <br><br>
+        {% for trip in trips %}
+            <div class="center-block">
+                <ul class="list-inline">
+                        <li><h3 style="margin: 0"> {{ trip.title }} </h3></li>
+                    {% if user.name == id %}
+                        <li style="position:absolute;right: 30%"><button type="button" class="btn btn-warning btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-edit"></span>       修改</h5></button></li>
+                        <li style="position: absolute;right:25%;"><button type="button" class="btn btn-danger btn-sm"><h5 style="margin: 0;"><span class="glyphicon glyphicon-remove"></span>       删除</h5></button></li>
+                    {% endif %}
+                </ul>
+            <div class=" left-block ">
+                <div class="list-group text-center">
+                  <a href="{{ trip.id }}/" class="list-group-item list-group-item-info">
+                    <h4 class="list-group-item-heading">{{ trip.introduction }}</h4>
+                    <div class="list-group-item-text">
+                    </div>
+                  </a>
+                </div>
+            </div>
+            <br>
+            </div>
+        {% endfor %}
+{#        <h3>照片墙 <span class="label label-default">New</span></h3>#}
+{#        <div class=" left-block ">#}
+{#            <div class="list-group text-center">#}
+{#              <a href="#" class="list-group-item list-group-item-info">#}
+{#                <h4 class="list-group-item-heading">List group item heading</h4>#}
+{#                <p class="list-group-item-text">...</p>#}
+{#              </a>#}
+{#            </div>#}
+{#        </div>#}
     </div>
 {% endblock %}
 
