--- a/blog/templates/blog/博客项目分析.html
+++ b/blog/templates/blog/博客项目分析.html
@@ -51,8 +51,8 @@
 
 <p>一个小的想法（如果博客大体完成的情况下再实现此附加功能）</p>
 
-<blockquote>
+<div class="well well-sm">
   <p>在首页增加一个每日新闻头条之类的（打算从大型新闻网站爬取相关的资讯，再自动显示在首页，并自动变成链接形式，点击即可进入原网站查看具体内容） <br>
   <strong>需要考虑如何在服务器中联网并爬取其他网站的资讯</strong></p>
-</blockquote></div></body>
+</div></div></body>
 </html>
