修复了main.html链接失效的问题

--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -49,7 +49,7 @@
                 </ul>
             <div class=" left-block ">
                 <div class="list-group text-center">
-                  <a href="{{ diary.id }}/" class="list-group-item list-group-item-info">
+                  <a href="/id={{ id }}/diary/{{ diary.id }}/" class="list-group-item list-group-item-info">
                     <h4 class="list-group-item-heading">{{ diary.introduction }}</h4>
                     <div class="list-group-item-text">
                     </div>
@@ -73,7 +73,7 @@
                 </ul>
             <div class=" left-block ">
                 <div class="list-group text-center">
-                  <a href="{{ tech.id }}/" class="list-group-item list-group-item-info">
+                  <a href="/id={{ id }}/tech/{{ tech.id }}/" class="list-group-item list-group-item-info">
                     <h4 class="list-group-item-heading">{{ tech.introduction }}</h4>
                     <div class="list-group-item-text">
                     </div>
@@ -97,7 +97,7 @@
                 </ul>
             <div class=" left-block ">
                 <div class="list-group text-center">
-                  <a href="{{ trip.id }}/" class="list-group-item list-group-item-info">
+                  <a href="/id={{ id }}/trip/{{ trip.id }}/" class="list-group-item list-group-item-info">
                     <h4 class="list-group-item-heading">{{ trip.introduction }}</h4>
                     <div class="list-group-item-text">
                     </div>
